# ethicalmeat-db

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pipeline.py  pyproject.toml  requirements-dev.txt  test_foodrepo.py  test_foodrepo_api.py  test_parser.py
.github/workflows/: ci.yml  pages.yml
docs/: README.md
emh/: __init__.py  cli.py
examples/: basic_usage.py
foodrepo/: __init__.py  classifier.py  client.py  filters.py  openfoodfacts.py
mockup/: index.html
src/: cli.py  emh_ratings.csv  emh_ratings.json  scraper.py
tests/: test_parser.py
utils/: __init__.py  mapping.py
